# weather-service

./: .coveragerc  .env_development  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
application/adapters/: __init__.py  open_weather_adapter.py
application/entities/: __init__.py  weather_info_entity.py
application/use_cases/: __init__.py  collect_weather_use_case.py  collet_weather_use_case.py
config/: enviroment_config.py  settings.py  urls.py
tests/: conftest.py
tests/test_application/test_adapters/: test_open_weather_adapter.py
tests/test_application/test_use_cases/: test_collect_weather_use_case.py
tests/test_weather/test_models/: test_weather_request_model.py
tests/test_weather/test_serializers/: test_get_weather_request_serializer.py
tests/test_weather/test_views/: test_weather_view.py
weather/: admin.py
weather/api/v1/: urls.py
weather/migrations/: 0001_initial.py
weather/models/: __init__.py  weather_info_model.py  weather_request_model.py
weather/serializers/: __init__.py  get_weather_request_serializer.py  weather_request_serializer.py
weather/utils/: city_id_list.py
weather/views/: __init__.py  weather_view.py
