[tool.poetry]
name = "weather-service"
version = "0.1.0"
description = "A weather service consumption."
authors = ["Bruno R. Scherer <brunoricardojava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.2"
djangorestframework = "~3.15"
pydantic = "~2.8"
httpx = "~0.27.0"
aiolimiter = "~1.1.0"
python-decouple = "~3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
black = "^24.8.0"
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
coverage = "^7.6.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = [
    "test_*.py",
    "*_test.py"
]

[tool.poetry.scripts]
format = "black ."
lint = "ruff ."

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["core/", "manage.py", "migrations/"]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.venv
    | core
    | drink_water/migrations
)/
'''

[tool.taskipy.tasks]
black = "black ."
ruff = "ruff check --fix ."
lint = "black . && ruff check --fix ."
test = "pytest"
coverage = "coverage run -m pytest && coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
